# rfid.rust

./: Cargo.toml  README.md  crate.info
doc/: beaglebone_connect.md
examples/: read.rs  write.rs
src/: com.rs  com_i2c.rs  lib.rs  main.rs  mfrc522.rs  picc.rs  util.rs
src/mfrc522/: mod.rs  picc.rs
