[package]
name = "rfid"
version = "0.1.4"
authors = ["Jonas Spanoghe <jonas@spanoghe.net>"]
edition = "2018"
description = "MFRC522 library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rise0chen/rfid.rust.git"
homepage = "https://github.com/rise0chen/rfid.rust.git"
keywords = ["rfid", "mfrc522", "mifare"]
categories = ["embedded"]
readme = "crate.info"

[dependencies]
embedded-hal = "0.2"
