[package]
name = "rfid"
version = "0.1.0"
authors = ["rise0chen <rise0chen@163.com>"]
description = "RFID"
documentation = "https://docs.rs/unmp"
homepage = "https://github.com/rise0chen/rfid.rust.git"
repository = "https://github.com/rise0chen/rfid.rust.git"
readme = "./README.md"
keywords = ["rfid", "mfrc522"]
categories = ["embedded"]
license-file = "LICENSE"
edition = "2018"

[dependencies]
embedded-hal = "0.2"
